<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yomeon.mycontactmanager.AddContact">
    <include layout="@layout/add_contact_toolbar"
        android:id="@+id/my_toolbar_add_contact"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbar_add_contact"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact_profile"
            android:text="@string/contact_profile"
            android:gravity="center_horizontal"
            android:textSize="30sp"
             />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/add_contact_first_name"
            android:hint="@string/first_name"
            android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/Last_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/add_contact_Last_name"
            android:hint="@string/last_name"
            android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/Email_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:id="@+id/add_contact_Email"
            android:hint="@string/email"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/phonenumber_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/add_contact_phonenumber"
            android:inputType="numberSigned"
            android:hint="@string/phonenumber"
            android:lines="1"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</RelativeLayout>
